revert: restore original layout/text across HTML & SCSS per Timeline spec
- SCSS: remove -subheading, revert tagline white-space/max-width, intro CTA to transparent/navy, remove strong list tweak, set project-subtitle to primary
- HTML: flags in language links, CTA text (EN: CONNECT; DA: KONTAKT), skills headers to text-primary, index spacing/logo, DK Hoedown block to placeholders

--- a/about.html
+++ b/about.html
@@ -34,8 +34,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="da/about.html">🇩🇰 DA</a>
+                        </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">CONNECT</a>
                         </li>
                     </ul>
                 </div>
@@ -68,10 +71,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-8">
-                        <h2 class="h3 mb-2">Have a project or idea? I’m just a LinkedIn connection away.</h2>
-                        <p class="mb-0">Whether product, content, or multidisciplinary work, I'm ready to help.</p>
+                        <h2 class="h3 mb-2">Come say hello!</h2>
+                            <p class="mb-0">I believe the best insights come from open conversation and exploring human journeys. </br> 
+                            Find me on LinkedIn - I’m always up for a coffee to discuss UX, anthropology, or the creative process.</p>
                     </div>
-                    <div class="col-lg-4 text-lg-end mt-3 mt-lg-0"><a href="https://www.linkedin.com/in/eddaoskarsdottir/" class="btn btn-primary btn-lg">Connect with me</a></div>
+                    <div class="col-lg-4 text-lg-end mt-3 mt-lg-0"><a href="https://www.linkedin.com/in/eddaoskarsdottir/" class="btn btn-primary">LET'S CONNECT</a></div>
                 </div>
             </div>
         </section>
@@ -159,8 +163,8 @@
                         <p class="mt-2 mb-0 tool-name">GitHub Copilot</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
-                        <img src="img/tools/chatgpt.png" alt="Chat GPT" class="img-fluid tool-logo" style="height: 40px" />
-                        <p class="mt-2 mb-0 tool-name">Chat GPT</p>
+                        <img src="img/tools/ai-logo.png" alt="Gen AI / LLMs" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Gen AI / LLMs</p>
                     </div>
                 </div>
             </div>
