--- a/da/about.html
+++ b/da/about.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="../about.html">🇬🇧 EN</a>
                         </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Forbind på LinkedIn">CONNECT</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Forbind på LinkedIn">KONTAKT</a>
                         </li>
                     </ul>
                 </div>
@@ -91,19 +91,19 @@
                 </div>
                 <div class="row g-4 mb-5">
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-subheading mb-3">UX & Design</h3>
+                        <h3 class="h4 text-primary mb-3">UX & Design</h3>
                         <p class="skill-set mb-0">User Research · Personas · User Journeys · Informationsarkitektur· Figma Prototyping · Tilgængelighed</p>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-subheading mb-3">Udvikling</h3>
+                        <h3 class="h4 text-primary mb-3">Udvikling</h3>
                         <p class="skill-set mb-0">Front-End Udvikling (HTML, SCSS, JavaScript, Bootstrap) · Interaktive prototyper</p>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-subheading mb-3">Visuel Kommunikation</h3>
+                        <h3 class="h4 text-primary mb-3">Visuel Kommunikation</h3>
                         <p class="skill-set mb-0">Branding · Visuel identitet · Layoutdesign · Motion Design (After Effects) · Fotografi</p>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-subheading mb-3">Projektledelse</h3>
+                        <h3 class="h4 text-primary mb-3">Projektledelse</h3>
                         <p class="skill-set mb-0">Teamkoordinering · Agile / Kanban · Kunde- & Stakeholderkommunikation · Double Diamond Process · Design Thinking · Lean Startup</p>
                     </div>
                 </div>
