--- a/da/index.html
+++ b/da/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="../index.html">🇬🇧 EN</a>
                         </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Forbind på LinkedIn">CONNECT</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Forbind på LinkedIn">KONTAKT</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="intro-logo">
                     <img src="../img/logo-indigo.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
-                <div class="text-center mt-5 mb-5">
+                <div class="text-center mt-3 mb-5">
                     <a href="projects.html" class="btn btn-intro">SE ALLE PROJEKTER</a>
                 </div>
             </div>
