--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="da/index.html">🇩🇰 DA</a>
+                        </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">CONNECT</a>
                         </li>
                     </ul>
                 </div>
@@ -47,8 +50,8 @@
             <div class="container text-center">
                 <div class="hero-content">
                     <h1 class="display-1 mb-3">EDDA ÓSK ÓSKARSDÓTTIR</h1>
-                    <p class="lead mb-4">MULTIMEDIA DESIGN STUDENT</p>
-                    <p class="tagline">From complexity to clarity — putting users at the heart of design</p>
+                    <p class="lead mb-4">DIGITAL DESIGNER & ANTHROPOLOGIST</p>
+                    <p class="tagline">From complexity to clarity — putting people at the heart of design</p>
                 </div>
             </div>
         </section>
@@ -60,7 +63,7 @@
                     My path to design started with a curiosity about people. Holding a BA in Anthropology and a Master's in Tourism, I spent years analyzing how we experience the world. Today, I translate those insights into digital products. I combine research, visual design, and code to create solutions that are not just beautiful to look at, but easy for real people to use.
                 </p>
                 <div class="intro-logo">
-                    <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
+                    <img src="img/logo-indigo.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
                 <div class="text-center mt-3 mb-5">
                     <a href="projects.html" class="btn btn-intro">VIEW MY PROJECTS</a>
