--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,11 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="projects.html">Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="da/projects.html">🇩🇰 DA</a>
+                        </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">CONNECT</a>
                         </li>
                     </ul>
                 </div>
@@ -95,7 +98,7 @@
                             <div class="project-meta">UX Research & Design &middot; Front-End Development &middot; Motion Graphics</div>
                             <p class="project-pitch">As a 2nd Semester Exam Project, we were tasked with helping JuicOrganic pivot from a B2B model to B2C. We came up with a smart vending machine concept that encourages sustainability, inspiring users to refill reusable bottles through a digital interface with a reward system.</p>
                             <details class="deep-dive">
-                                <summary>Read Case Study</summary>
+                                <summary>View Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
                                     <p>Our group of three worked closely on all aspects, but I wore two main hats on this project: UX Designer and Developer. I leveraged anthropological methods to conduct deep-dive interviews to understand why users hesitate to use reusable solutions, then translated those insights into user journeys and personas and low-fi wireframes. On the technical side, I built the front-end architecture. I coded the interface using HTML, SCSS, and JavaScript, ensuring the design was responsive. I also animated a promotional video in After Effects, which was also used as part of the vending machine interface.</p>
@@ -159,7 +162,7 @@
                             <div class="project-meta">Project Coordinator &middot; Team Manager</div>
                             <p class="project-pitch">We formed a nine-person digital agency to deliver real client work, including branding, prototyping and visual design. The challenge was maintaining quality and coherence across a diverse student team while simultaneously managing multiple client accounts.</p>
                             <details class="deep-dive">
-                                <summary>Read Case Study</summary>
+                                <summary>View Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
                                     <p>My primary focus was Project Coordination. I oversaw the entire workflow, led daily stand-ups, facilitated communication between sub-teams, and kept our Acting CEO (teacher) informed on progress. I matched team members to tasks based on their individual strengths to maximise efficiency, stepping in to assist across projects whenever bottlenecks appeared. Beyond team management, I also maintained a hands-on role by taking ownership of one of the client cases.</p>
@@ -218,7 +221,7 @@
                             <div class="project-meta">Product Owner &middot; UX & Design Lead</div>
                             <p class="project-pitch">Econiq was a client for our agency simulation, Das Kleine Büro. They are a FinTech startup that needed a user-centered SaaS prototype. The challenge was transforming a complex financial forecasting tool into an intuitive interface for non-expert users.</p>
                             <details class="deep-dive">
-                                <summary>Read Case Study</summary>
+                                <summary>View Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
                                     <p>I served as the Product Owner, bridging the gap between the client's business requirements and our team. Simultaneously, I acted as UX & Design Lead, taking the project from concept to high-fidelity. I started by structuring the layout with low-fidelity wireframes to map out financial workflows, then moved into Figma to build the final prototype. I conducted user testing to validate the interface, ensuring complex data became a clean, intuitive user experience.</p>
@@ -279,7 +282,7 @@
                             <div class="project-meta">Writer &middot; Photographer &middot; Editorial Designer</div>
                             <p class="project-pitch">As part of the elective course Visual Design and Layout, I contributed a feature article to a collaborative digital magazine. The piece explores how digital media shapes our perception of reality through the concept of echo chambers.</p>
                             <details class="deep-dive">
-                                <summary>Read Case Study</summary>
+                                <summary>View Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
                                     <p>This was a solo execution within a collaborative framework. I authored the article to interpret the theme through a visual anthropological lens and photographed all original assets to ensure a unique visual language. I then designed the layout, strictly applying Gestalt principles and grid systems to create a reading experience that felt structured yet immersive.</p>
