Danish translation added + UI style changes

--- a/da/projects.html
+++ b/da/projects.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="../projects.html">🇬🇧 EN</a>
                         </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Forbind på LinkedIn">KONTAKT</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Forbind på LinkedIn">CONNECT</a>
                         </li>
                     </ul>
                 </div>
@@ -348,18 +348,28 @@
                             <h2>Hoedown After Dark</h2>
                             <h4 class="project-subtitle">E-commerce Brand</h4>
                             <div class="project-meta">Projektkoordination · Strategist · Visuel & Brand Designer</div>
-                            <p class="project-pitch">Dette er pladsholderteksten. Vi etablerede et tøjmærke, der kombinerer western-æstetik med underground techno-kultur. Målet var at skabe en stærk visuel identitet og en testet produktlinje.</p>
+                            <p class="project-pitch">Vi etablerede et tøjmærke, der kombinerer western-æstetik med underground techno-kultur og queer-miljøet. Målet var at skabe en stærk visuel identitet og en testet produktlinje, der støttede velgørenhedsorganisationen LGBT Asylum.</p>
                             <details class="deep-dive">
                                 <summary>Læs Casestudie</summary>
                                 <div class="deep-content">
                                     <h5>MY ROLE</h5>
-                                    <p>Pladsholder for dybdegående indhold.</p>
+                                    <p>Jeg tog ansvaret for projektledelsen og brugte et Kanban board til at opretholde et agile workflow. Vi anvendte Lean Startup-principper for hurtigt at teste og validere brandkonceptet med vores målgruppe. Jeg udviklede forretningsmodellen og SEO-strategi for at sikre, at brandet var kommercielt levedygtigt. Designmæssigt var jeg med til at forme den visuelle identitet og bruge persuasive design-principper i webprototypen for at øge donationerne.</p>
                                     <h5>KEY DELIVERABLES</h5>
                                     <ul>
-                                        <li>Visuel &amp; Brand Identity</li>
-                                        <li>Project Management</li>
-                                        <li>Business Strategy</li>
+                                        <li><strong>Visuel &amp; Brand Identity:</strong> En sammenhængende brandguide.</li>
+                                        <li><strong>Project Management:</strong> Agile workflow via Kanban.</li>
+                                        <li><strong>Business Strategy:</strong> SEO-analyse og Business Model Canvas.</li>
                                     </ul>
+                                    <h5>KEY TAKEAWAYS</h5>
+                                    <div class="learning-box">
+                                        <ul>
+                                            <li><strong>Niche Targeting:</strong> Jeg lærte, at forsøget på at appellere til alle ikke appellerer til nogen; at læne sig ind i en specifik subkultur skabte et stærkere brand.</li>
+                                            <li><strong>Agile Management:</strong> Brugen af Kanban hjalp os med at forblive organiserede og målrettede.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="project-links-inside mt-4">
+                                        <a href="https://www.instagram.com/hoedownafterdark/" target="_blank" class="project-link">Se Brand Instagram</a>
+                                    </div>
                                 </div>
                             </details>
                         </div>
