--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,10 @@
                             <a class="nav-link active" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="da/projects.html">🇩🇰 DA</a>
+                            <a class="nav-link" href="da/projects.html" title="Dansk">🇩🇰 DA</a>
                         </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">CONNECT</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
                         </li>
                     </ul>
                 </div>
