--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="da/about.html">🇩🇰 DA</a>
+                            <a class="nav-link" href="da/about.html" title="Dansk">🇩🇰 DA</a>
                         </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">CONNECT</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
                         </li>
                     </ul>
                 </div>
@@ -90,19 +90,19 @@
                 </div>
                 <div class="row g-4 mb-5">
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-primary mb-3">UX & Design</h3>
+                        <h3 class="h4 text-subheading mb-3">UX & Design</h3>
                         <p class="skill-set mb-0">User Research · Personas · User Journeys · Information Architecture · Figma Prototyping · Accessibility</p>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-primary mb-3">Development</h3>
+                        <h3 class="h4 text-subheading mb-3">Development</h3>
                         <p class="skill-set mb-0">Front-End Coding (HTML, SCSS, JavaScript, Bootstrap) · Interactive Prototypes</p>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-primary mb-3">Visual Communication</h3>
+                        <h3 class="h4 text-subheading mb-3">Visual Communication</h3>
                         <p class="skill-set mb-0">Branding · Visual Identity · Layout Design · Motion Design (After Effects) · Photography</p>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-4 text-center">
-                        <h3 class="h4 text-primary mb-3">Project Management</h3>
+                        <h3 class="h4 text-subheading mb-3">Project Management</h3>
                         <p class="skill-set mb-0">Team Coordination · Agile / Kanban · Client Communication · Double Diamond Process · Design Thinking · Lean Startup</p>
                     </div>
                 </div>
