--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="da/index.html">🇩🇰 DA</a>
+                            <a class="nav-link" href="da/index.html" title="Dansk">🇩🇰 DA</a>
                         </li>
                         <li class="nav-item nav-cta">
-                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">CONNECT</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" title="Connect on LinkedIn">Connect</a>
                         </li>
                     </ul>
                 </div>
